Added input field and search button

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -13,5 +13,6 @@
     </ion-toolbar>
   </ion-header>
 
+  <input type="text" class="search-field"><button onclick="search()" class="search-button">Search</button>
   <app-explore-container name="Tab 1 page"></app-explore-container>
 </ion-content>
