--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -14,5 +14,9 @@
   </ion-header>
 
   <input type="text" class="search-field"><button onclick="search()" class="search-button">Search</button>
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <img class="card" onclick="cardInfoPlains()" src="https://static.cardkingdom.com/images/magic-the-gathering/core-set-2021/plains-260-70537.jpg">
+  <img class="card" onclick="cardInfoIsland()" src="https://static.cardkingdom.com/images/magic-the-gathering/core-set-2021/island-263-77165.jpg">
+  <img class="card" onclick="cardInfoSwamp()" src="https://static.cardkingdom.com/images/magic-the-gathering/core-set-2021/swamp-266-77361.jpg">
+  <img class="card" onclick="cardInfoMountain()" src="https://static.cardkingdom.com/images/magic-the-gathering/core-set-2021/mountain-270-74548.jpg">
+  <img class="card" onclick="cardInfoForest()" src="https://static.cardkingdom.com/images/magic-the-gathering/core-set-2021/forest-273-56154.jpg">
 </ion-content>
